# rafi

./: .gitignore  .mcp.json  CLAUDE.md  LOCAL_SETUP.md  RAFI_SPEC.md  README.md
rafi_assistant/: .env.template  .gitignore  DEPENDENCIES.md  Dockerfile  GOOGLE_INTEGRATION_RUNBOOK.md  TEST_PLAN.md  cloudflared-config.yml  config.yaml  docker-compose.yml  prompt_plan.md  pyproject.toml  pytest.ini  requirements.txt  run_local.py  todo.md
rafi_assistant/config/: client_config.example.yaml
rafi_assistant/memory/: AGENTS.md  HEARTBEAT.md  MEMORY.md  SOUL.md  USER.md
rafi_assistant/scripts/: generate_deps.py  google_integration_diagnose.py
rafi_assistant/skills/cad/: SKILL.md
rafi_assistant/skills/calendar/: SKILL.md
rafi_assistant/skills/email/: SKILL.md
rafi_assistant/skills/memory/: SKILL.md
rafi_assistant/skills/notes/: SKILL.md
rafi_assistant/skills/screen/: SKILL.md
rafi_assistant/skills/settings/: SKILL.md
rafi_assistant/skills/tasks/: SKILL.md
rafi_assistant/skills/voice/: SKILL.md
rafi_assistant/skills/weather/: SKILL.md
rafi_assistant/skills/web/: SKILL.md
rafi_assistant/src/: main.py
rafi_assistant/src/api/: mobile_ws.py
rafi_assistant/src/bot/: command_parser.py  telegram_bot.py
rafi_assistant/src/channels/: base.py  discord.py  manager.py  processor.py  slack.py  telegram.py  whatsapp.py
rafi_assistant/src/config/: loader.py
rafi_assistant/src/db/: migrations.sql  supabase_client.py
rafi_assistant/src/llm/: anthropic_provider.py  gemini_provider.py  groq_provider.py  llm_manager.py  openai_provider.py  provider.py  tool_definitions.py
rafi_assistant/src/mcp/: server.py  sse_transport.py
rafi_assistant/src/orchestration/: service_registry.py
rafi_assistant/tests/: conftest.py
rafi_deploy/: .gitignore  DEPENDENCIES.md  pyproject.toml  pytest.ini  requirements.txt
rafi_deploy/scripts/: generate_deps.py
rafi_deploy/src/: cli.py
rafi_deploy/templates/: client_config.template.yaml
rafi_deploy/tests/: conftest.py
(+106 files in other folders)
