[project]
name = "rafi_assistant"
version = "0.1.0"
description = "Personal AI assistant with Telegram and voice call support"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests requiring live API credentials",
    "security: Security tests for injection, auth, and boundary testing",
    "e2e: End-to-end recursive pipeline tests",
]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
